Fix #21 (#22)
* Fix no scroll bar if pull requests go vertically off-screen.

* Replace old publisher with new publisher.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Segoe UI VSS (Regular)","-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Helvetica,Ubuntu,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    overflow: auto !important;
 }
 
 h1 {
